--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,5 @@ services:
       - web
     environment:
       - PYTHONUNBUFFERED=1
-    # Override the endpoint to point to the web service within the docker network
-    command: python main.py --endpoint http://web:3000/api/monitor --interval 2
+    command: python main.py --endpoint https://sysmetric.vercel.app/api/monitor --interval 2
     restart: always
