--- a/localMonitor/Dockerfile
+++ b/localMonitor/Dockerfile
@@ -8,6 +8,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+RUN rm -f config.json
 
 ENV PYTHONUNBUFFERED=1
 
